--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,12 +1,5 @@
 .container {
-    height: 100vh;
-    max-width: 1120px;
-    margin: 0 auto;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    flex: 1;
 }
 
 .content {
