fix: fix rules page

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,28 +1,10 @@
-.container {
+.menu {
     background: var(--blue-dark);
     width: 100%;
-    max-width: 1120px;
-    margin: 0 auto;
     height: 64px;
     padding: 8px;
 
-
-
-    a {
+    nav {
         display: flex;
-        align-items: center;
-
-        font-size: 1rem;
-        cursor: pointer;
-
-        &:hover {
-            filter: brightness(0.9);
-            font-weight: 700;
-        }
-
-        & + svg {
-            margin-left: 1rem;
-            color: var(--blue-dark);
-        }
     }
 }
