--- a/src/styles/Rules.module.scss
+++ b/src/styles/Rules.module.scss
@@ -11,7 +11,7 @@
 
 .content {
     width: 100%;
-    
+    padding: 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,6 +20,7 @@
     margin-bottom: 3rem;
 
     h1 {
+        margin: 16px auto;
         padding: 16px;
         color: var(--blue-dark);
         font-weight: 600;
@@ -39,6 +40,7 @@
 
     a {
         text-decoration: none;
+        font-weight: 700;
     }
 
 }
