--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,10 +1,17 @@
-.menu {
+.headerContainer {
     background: var(--blue-dark);
     width: 100%;
-    height: 64px;
+    height: 100%;
     padding: 8px;
 
-    nav {
-        display: flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    .headerContent { 
+        max-width: 1050px;
+        margin: 0 auto;
     }
+
 }
+
