--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,17 +1,31 @@
 .headerContainer {
     background: var(--blue-dark);
     width: 100%;
-    height: 100%;
-    padding: 8px;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
+
     .headerContent { 
         max-width: 1050px;
         margin: 0 auto;
+        padding: 32px;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .link { 
+
+            a {
+                color: var(--white);
+                cursor: pointer;
+                text-transform: uppercase;
+                font-weight: 600;
+                margin-left: 16px;
+            }
+        }
     }
 
+    .logo { 
+        display: flex;
+    }
 }
 
