--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,31 +1,16 @@
-.container {
-    height: calc(100vh - 128px);
-    display: flex;
-}
-
 .content {
-    padding: 2rem;
-    margin-top: 3rem;
-    max-width: 1050px;
-    margin: 0 auto;
-
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 
-    @media (max-width: 720px) {
-        flex-direction: column;
-    }
-
-    div {
+    main {
+        min-height: 350px;
         display: flex;
         flex-direction: column;
         align-items: center;
-
-        img {
-            margin-bottom: 3rem;
-        }
+        justify-content: space-between;
     }
 
     p {
@@ -33,45 +18,59 @@
         font-weight: 700;
         font-size: 2rem;
         margin-bottom: 1rem;
+        text-align: center;
+    }
 
-        @media (max-width: 480px) {
-            font-size: 1.5rem;
+
+    aside {
+        min-height: 350px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    
+        svg {
+            font-size: 2rem;
+        } 
+        
+        .links {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+
+            a + a {
+                margin-left: 1rem;
+            }
         }
     }
-
-    img {
-        width: 80%;
-    }
 }
 
+@media (max-width: 780px) {
+    .content { 
+        flex-direction: column;
+        justify-content: center;
 
-.imageBag {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+        main {
+            justify-content: center;
 
-    @media (max-width: 720px) {
-        margin-top: 5rem;
+            > div {
+                margin-bottom: 2rem;
+
+                p { 
+                    font-size: 1.5rem;
+                }
+            }
+            
+        }
+
+        aside { 
+            justify-content: center;
+
+            .links {
+                margin-top: 2rem;
+            }
+        }         
     }
-
-    img {
-        width: 60%;
-        margin-bottom: 2rem;
-    }
-
-    svg {
-        color: var(--blue-dark);
-        font-size: 2rem;
-    } 
-    
-    div {
-        width: 30%;
-    
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-}
-
+}    
