feat: user and session auth with supabase

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,9 +1,8 @@
 .footerContainer {
     background: var(--blue-dark);
     width: 100%;
-    height: 100%;
-    padding: 32px;
-
+    height: 5rem;
+    
     display: flex;
     align-items: center;
     justify-content: center;
