--- a/src/components/SignOutButton/styles.module.scss
+++ b/src/components/SignOutButton/styles.module.scss
@@ -1,6 +1,6 @@
 .container {
     height: 3rem;
-    background: linear-gradient(90deg, #33A6F2 23.16%, #75C8FF 71.65%);
+    background: var(--blue-light);
     border-radius: 3rem;
     border: 0;
     padding: 1.5rem;
