--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,10 +6,11 @@
 
 :root {
   --white: #FFFFFF;
-  --blue-dark: #33A6F2;
-  --blue-light: #75C8FF;
-  --black: #000000;
   --background: #F9F9F9;
+  --blue-light: #75C8FF;
+  --blue-dark: #33A6F2;
+  --red: #ff0000;
+  --black: #000000;
 }
 
 body {
@@ -33,7 +34,7 @@ a {
 }
 
 .wrapper {
-  min-height: calc(100vh - 166px);
+  min-height: calc(100vh - 160px);
   display: flex;
 
   max-width: 1050px;
@@ -53,6 +54,7 @@ a {
 
       body {
         .wrapper {
+          min-height: calc(100vh - 128px);
           padding: 0 1rem;
         }
       }
